<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_user_info"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/personal_info"
        android:textColor="@color/black"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F2F4F5"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_info"/>

    <TextView
        android:id="@+id/tv_family_manager"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/family_manager"
        android:textColor="@color/black"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F2F4F5"
        app:layout_constraintTop_toBottomOf="@+id/tv_family_manager"/>

    <TextView
        android:id="@+id/tv_share_device"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/share_device"
        android:textColor="@color/black"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_family_manager" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F2F4F5"
        app:layout_constraintTop_toBottomOf="@+id/tv_share_device"/>

    <TextView
        android:id="@+id/tv_message_notify"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/message_notify"
        android:textColor="@color/black"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_share_device" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F2F4F5"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_notify"/>

    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/feedback"
        android:textColor="@color/black"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_notify" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F2F4F5"
        app:layout_constraintTop_toBottomOf="@+id/tv_feedback"/>

</androidx.constraintlayout.widget.ConstraintLayout>